--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -9,3 +9,8 @@
     import 'relative/path/to/stylesheet.scss';
 
 */
+#root{
+    display: flex;
+    justify-content: center;
+    margin-top: 50px;
+}
